# Prime

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: AI.md  ARCHITECTURE.md  ROADMAP.md
engine/synth/: CMakeLists.txt  libv2.h  ronan.cpp  sounddef.cpp  sounddef.h  synth_core.cpp  types.h  v2mconv.cpp  v2mplayer.cpp  v2mplayer.h
engine/texture/: CMakeLists.txt  graph.cpp  graph.hpp  recipe.cpp  recipe.hpp
licenses/: README.md
release/: Prime.desktop  README-STEAMDECK.md  install.sh
scripts/: package-linux.sh
studio/: capture_screenshots.py  launch.sh  requirements.txt
studio/server/: __init__.py  ai.py  engine.py  graph.py  main.py  mutate.py
studio/web/: app.js  index.html  style.css
tests/: CMakeLists.txt  smoke.cpp  smoke_common.h  smoke_graph.cpp  smoke_synth.cpp  smoke_texture.cpp
tests/fixtures/: panel.recipe
tools/primeforge/: CMakeLists.txt  main.cpp
tools/primegraph/: CMakeLists.txt  main.cpp
tools/primeplay/: CMakeLists.txt  main.cpp
tools/primetex/: CMakeLists.txt  main.cpp
